# mykobo-dapp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  TEST_DOCUMENTATION.md  TRANSACTION_RETRY_README.md  boot.sh  entrypoint.sh  env.sh  extract-wagmi-script.sh  generate_envfile.sh  image_tag.sh  manage.py  merge-css.py  pyproject.toml  retry_transactions.py  retry_worker.py  run.py  run_inbox_consumer.sh  run_migrations.py  run_transaction_processor.sh
.circleci/: config.yml
app/: __init__.py  config.py  database.py  decorators.py  filters.py  forms.py  inbox_consumer.py  logger.py  models.py  transaction_processor.py  transaction_retry.py  util.py
app/mod_api/: __init__.py  transactions.py
app/mod_common/: __init__.py  auth.py  common.py
app/mod_solana/: __init__.py  transaction.py
app/mod_user/: __init__.py  user.py
app/static/: index.html
app/static/aux/: common.js  transaction.js
app/static/css/: main.css  mykobo.css
app/templates/: base.html
app/templates/common/: contact.html
documentation/: AUTO_MIGRATION_SUMMARY.md  DATABASE_SETUP.md  DATABASE_URL_FORMAT.md  DOCKER_SERVICES.md  FINAL_IMPLEMENTATION_SUMMARY.md  INBOX_PATTERN_SUMMARY.md  INDEX.md  PERSISTENCE_IMPLEMENTATION.md  TEST_DOCUMENTATION.md  TEST_SUMMARY.md  TRANSACTION_IDENTIFIERS.md  TRANSACTION_PROCESSOR.md
migrations/versions/: 71c30d32e708_add_tx_hash_field_to_transactions_table.py  7af6b0138b5a_.py  8eb63c6edb24_initial_transactions_and_inbox.py  add_nonces_table.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_decorators.py  test_inbox_consumer.py  test_inbox_integration.py  test_inbox_model.py  test_transaction_persistence.py  test_transaction_processor.py  test_transaction_retry.py  test_wallet_balance.py
wallet-connect/: README.md  SOLANA_SETUP.md  package.json  vite.config.ts
wallet-connect/src/: auth.ts  main.ts  solana.ts  style.css  wagmi.ts
(+18 files in other folders)
