[project]
name = "dapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Kwabena Aning",email = "kwabena.aning@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "solana (>=0.36.9)",
    "pynacl (>=1.6.0,<2.0.0)",
    "pyjwt>=2.10.1",
    "flask-limiter (>=4.0.0,<5.0.0)",
    "base58>=2.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
]
